Melhorias no portifolio

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 
 	<!-- OpenGraph & Twitter tags -->
 	<meta property="og:title" content="Iago Andrade de Almeida - Desenvolvedor Web - FullStack">
-	<meta property="og:description" content="Sou Desenvolvedora Frontend e Backend com PHP que quer seguir para o mundo de aplicativos. Aqui você pode ver um pouco sobre mim e alguns projetos que me envolvi." />
-    <meta property="og:url" content="https://marcelabomfim.github.io/">
+	<meta property="og:description" content="Sou Desenvolvedora Frontend e Backend que quer seguir para o mundo de aplicativos. Aqui você pode ver um pouco sobre mim e alguns projetos que me envolvi." />
+    <meta property="og:url" content="https://zuiago.github.io/">
     <meta property="og:image" content="https://s30.postimg.org/u1rklzg8h/opengraphimg.jpg">
-    <meta name="twitter:title" content="Marcela Bomfim - Desenvolvedora Web - Frontend & PHP">
+    <meta name="twitter:title" content="Iago Andrade - Desenvolvedor Web - FullStack">
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:description" content="Sou Desenvolvedora Frontend e Backend com PHP que quer seguir para o mundo de aplicativos. Aqui você pode ver um pouco sobre mim e alguns projetos que me envolvi." />
-	<meta name="twitter:site" content="@cecelabomfim">
+	<meta name="twitter:site" content="@iago_aa">
     <meta name="twitter:creator" content="@cecelabomfim">
     <meta name="twitter:image" content="https://s30.postimg.org/u1rklzg8h/opengraphimg.jpg">
 
 	<title>Iago Andrade de Almeida - Desenvolvedor Web - FullStack</title>
 	<meta name="description" content="Sou Desenvolvedora Frontend e Backend com PHP que quer seguir para o mundo de aplicativos. Aqui você pode ver um pouco sobre mim e alguns projetos que me envolvi.">
-	<link rel="author" href="https://www.facebook.com/marcelabomfim">
+	<link rel="author" href="https://www.facebook.com/iago.andradedealmeida">
 
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
 
@@ -65,7 +65,7 @@
 	    	<a href="#">
 	        	<div class="logo-container">
 	                <div class="logo" rel="tooltip" title="O Capitão América entendeu a referência" data-placement="bottom" data-html="true">
-	                    <img src="assets/img/logo-marcela-bomfim.png" alt="Marcela Bomfim Logo">
+	                    <img src="assets/img/logo-iago-andrade.png" alt="Marcela Bomfim Logo">
 	                </div>
 	                <div class="brand">
 	                    Iago Andrade
@@ -145,16 +145,16 @@
                 	<div class="col-xs-12">
 	                    <div class="profile">
 	                        <div class="avatar">
-	                            <img src="assets/img/marcela-bomfim.jpg" alt="Marcela Bomfim" class="img-circle img-responsive img-raised">
+	                            <img src="assets/img/iago-andrade.jpeg" alt="Marcela Bomfim" class="img-circle img-responsive img-raised">
 	                        </div>
 	                        <div class="name">
 	                            <h3 class="title">Iago Andrade</h3>
 								<h5>Desenvolvedor Web - FullStack</h5>
 	                        </div>
 			                <div class="description text-center">
-			                    <p>Formado em Analise e Desenvolvimento de Sistemas e tenho conhecimentos em <b>HTML5, CSS3, Javascript, PHP, MYSQL, Arduíno,</b> entre outros.</p>
-								<p>Sempre gostei da área de TI e, desde que conheci a programação de computadores, descobri que tenho uma afinidade muito grande e uma facilidade surpreendente. Foi então que decidi seguir na carreira de desenvolvimento, trabalhando e me divertindo.</p>
-								<p>Atualmente estou trabalhando na <a href="https://www.lojaskd.com.br" target="_blank">LojasKD</a> com desenvolvimento frontend, mas não largo os estudos e minha curiosidade me levou a estudar, entre outras coisas, aplicativos mobile - área onde ainda vou fazer uma pós graduação.</p>
+			                    <p>Formado em Analise e Desenvolvimento de Sistemas e tenho conhecimentos em <b>HTML5, CSS3, Javascript, Java, MYSQL</b> entre outros.</p>
+								<p>Sempre gostei da área de TI e, desde que conheci a programação de computadores, descobri que tenho uma afinidade muito grande e uma vontade gigante de aprender. Foi então que decidi seguir na carreira de desenvolvimento, trabalhando e me divertindo.</p>
+								<p>Atualmente estou trabalhando na <a href="http://pcsist.com.br" target="_blank">Pc</a> com desenvolvimento frontend, mas não largo os estudos e minha curiosidade me levou a estudar, entre outras coisas, aplicativos mobile, backend com Java - com certificacao a caminho</p>
 								<div class="clear"></div>
 			                </div>
 	                    </div>
@@ -185,7 +185,7 @@
 							<img src="assets/img/personalidades/paixao.png" alt="Paixão" class="img-responsive">
 						</div>
 						<h4 class="title text-center"><span class="tags"></span> Paixão <span class="tags">/></span></h4>
-						<p class="text-center">Sou apaixonada pelo que faço</p>
+						<p class="text-center">Sou apaixonado pelo que faço</p>
 	                </div>
 	                <div class="col-md-3 col-xs-6">
 						<div class="icon">
@@ -307,14 +307,14 @@
 	        		<div class="col-md-8 col-md-offset-2">
 	        			<div class="row experience">
 	        				<div class="col-sm-2">
-	        					<img src="assets/img/experiencia/totvs-logo.png" alt="TOTVS" class="img-circle img-responsive img-raised">
+	        					<img src="assets/img/experiencia/pc-sistemas.jpg" alt="Pc-Sistemas" class="img-circle img-responsive img-raised">
 	        				</div>
 	        				<div class="col-sm-10">
-	        					<h3>TOTVS</h3>
-	        					<p>Março 2016 - atual</p>
+	        					<h3>PC Sistemas</h3>
+	        					<p>Março 2017 - atual</p>
 	        					<h4 class="title">Front-end Developer</h4>
 								<div class="description">
-	        						<p>Desenvolvimento focado no Front-end da loja e seus projetos, dando sequência aos trabalhos de UX e UI Designers afim de melhorar o desempenho, usabilidade e conversão da loja. Aqui estou tendo a oportunidade de trabalhar com pessoas super aplicadas e voltadas ao resultado, bem como utilizar novas técnicas, metodologias e linguagens.</p>
+	        						<p>Desenvolvimento focado .....</p>
 	        					</div>
 	        				</div>
 	        			</div>
@@ -325,9 +325,9 @@
 	        				<div class="col-sm-10">
 	        					<h3>Memora</h3>
 	        					<p>Março 2016 - Abril 2017</p>
-	        					<h4 class="title">Front-end Developer</h4>
+	        					<h4 class="title">Analista Desenvolvedor Pleno</h4>
 								<div class="description">
-	        						<p>Desenvolvimento focado no Front-end da loja e seus projetos, dando sequência aos trabalhos de UX e UI Designers afim de melhorar o desempenho, usabilidade e conversão da loja. Aqui estou tendo a oportunidade de trabalhar com pessoas super aplicadas e voltadas ao resultado, bem como utilizar novas técnicas, metodologias e linguagens.</p>
+	        						<p>Desenvolvimento focado ...</p>
 	        					</div>
 	        				</div>
 	        			</div>
@@ -340,7 +340,7 @@
 	        					<p>Outubro 2014 - Março 2016</p>
 	        					<h4 class="title">Analista Desenvolvedor Junior</h4>
 	        					<div class="description">
-	        						<p>Desenvolvimento de sites, lojas virtuais, sistemas e aplicativos web. Recorte e estruturação de layout com HTML5 e CSS3. Design responsivo, mobile first. Desempenho e otimização de página para o google. Painel administrativo de conteúdo dos sites. Sistema web para imobiliárias. Programação completa desde o Front ao Back-end (em PHP), porém com foco maior para Front-end na maioria dos projetos para dar mais agilidade aos colegas de equipe. </p>
+	        						<p>Desenvolvimento de sistemas...</p>
 	        					</div>
 	        				</div>
 	        			</div>
@@ -353,7 +353,7 @@
 	        					<p>Setembro 2013 - Outubro 2014</p>
 	        					<h4 class="title">Programador Java Junior</h4>
 	        					<div class="description">
-	        						<p>Suporte em TI aos usuários do escritório. Manutenção em sistemas internos para acompanhamento de dados de transações e serviços capturados através de webservice. Desenvolvimento e manutenção de site intranet.</p>
+									<p>Desenvolvimento de sistemas...</p>
 	        					</div>
 	        				</div>
 	        			</div>
@@ -386,10 +386,10 @@
 						<br>
 						<h4 class="text-center description">Siga-me nas redes sociais:</h4>
 						<p class="text-center">
-							<a title="Follow me on Facebook" href="https://facebook.com/cecelabomfim" target="_blank" class="btn btn-primary btn-fab btn-fab-mini btn-round btn-just-icon">
+							<a title="Follow me on Facebook" href="https://www.facebook.com/iago.andradedealmeida" target="_blank" class="btn btn-primary btn-fab btn-fab-mini btn-round btn-just-icon">
 								<i class="fa fa-facebook"></i>
 							</a>
-							<a title="Follow me on Likedin" href="https://linkedin.com/in/marcelabomfim" target="_blank" class="btn btn-primary btn-fab btn-fab-mini btn-round btn-just-icon">
+							<a title="Follow me on Likedin" href="https://www.linkedin.com/in/iago-andrade-de-almeida-07659230/" target="_blank" class="btn btn-primary btn-fab btn-fab-mini btn-round btn-just-icon">
 								<i class="fa fa-linkedin"></i>
 							</a>
 						</p>
@@ -433,7 +433,7 @@
     <footer class="footer">
 	    <div class="container">
 	        <div class="text-center copyright">
-	            &copy; 2017, made with <i class="material-icons">favorite</i> by MarcelaBomfim
+	            &copy; 2017, made with <i class="material-icons">favorite</i> by IagoAA
 	        </div>
 	    </div>
 	</footer>
