--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:description" content="Sou Desenvolvedora Frontend e Backend com PHP que quer seguir para o mundo de aplicativos. Aqui você pode ver um pouco sobre mim e alguns projetos que me envolvi." />
 	<meta name="twitter:site" content="@iago_aa">
-    <meta name="twitter:creator" content="@cecelabomfim">
+    <meta name="twitter:creator" content="@iago_aa">
     <meta name="twitter:image" content="https://s30.postimg.org/u1rklzg8h/opengraphimg.jpg">
 
 	<title>Iago Andrade de Almeida - Desenvolvedor Web - FullStack</title>
@@ -204,13 +204,13 @@
 	            	<h2 class="text-center title">Portfolio</h2>
 	            	<div class="portfolio-item">
 	                	<div class="col-sm-7">
-	                        <img src="assets/img/portfolio/codepen-cecelabomfim.jpg" alt="Codepen CecelaBomfim" class="img-rounded img-responsive img-raised">
+	                        <img src="assets/img/portfolio/codepen-IagoAA.png" alt="Codepen CecelaBomfim" class="img-rounded img-responsive img-raised">
 	                    </div>
 	                	<div class="col-sm-5">
 	                        <h3>Meu CodePen</h3>
 	                        <p><b>CodePen</b> é uma plataforma online para desenvolvedores criarem e testarem códigos.<br>Em minha página você pode conferir algumas coisas que fiz como "passatempo"</p>
 
-		                    <a href="http://www.codepen.io/cecelabomfim" class="btn btn-primary" target="_blank">
+		                    <a href="http://www.codepen.io/IagoAA" class="btn btn-primary" target="_blank">
 								<i class="material-icons">open_in_new</i> Visitar
 								<div class="ripple-container"></div>
 							</a>
@@ -314,7 +314,11 @@
 	        					<p>Março 2017 - atual</p>
 	        					<h4 class="title">Front-end Developer</h4>
 								<div class="description">
-	        						<p>Desenvolvimento focado .....</p>
+	        						<p>Desenvolvimento de soluções para o mercado
+										atacadista distribuidor, com foco na usabilidade e portabilidade nas aplicações.
+										Migração de rotinas Desktop para plataforma Web, mantenedor do projeto Front-End
+										dessas rotinas e sua arquitetura como um todo. Trabalho
+										principalmente desenvolvendo em Typescript no Angular 4.</p>
 	        					</div>
 	        				</div>
 	        			</div>
@@ -327,7 +331,10 @@
 	        					<p>Março 2016 - Abril 2017</p>
 	        					<h4 class="title">Analista Desenvolvedor Pleno</h4>
 								<div class="description">
-	        						<p>Desenvolvimento focado ...</p>
+	        						<p>Desenvolver aplicações web inovadoras com
+										linguagens de mercado, JAVA e Javascript, Database Oracle. Responsável por desenvolver e manter da melhor
+										maneira arquiteturas que utilizam Frameworks Front-End, bem como a integração com Back-End. Implementar
+										soluções com foco no usuário final, que sejam de fácil manutenibilidade.</p>
 	        					</div>
 	        				</div>
 	        			</div>
@@ -340,7 +347,9 @@
 	        					<p>Outubro 2014 - Março 2016</p>
 	        					<h4 class="title">Analista Desenvolvedor Junior</h4>
 	        					<div class="description">
-	        						<p>Desenvolvimento de sistemas...</p>
+	        						<p>Desenvolvimento de ERP Governamental com Framework Javascript AngularJS.
+										Criação de aplicativos mobile híbridos para Android e IOS
+										utilizando Framework Ionic com IndexedDB.</p>
 	        					</div>
 	        				</div>
 	        			</div>
@@ -353,7 +362,10 @@
 	        					<p>Setembro 2013 - Outubro 2014</p>
 	        					<h4 class="title">Programador Java Junior</h4>
 	        					<div class="description">
-									<p>Desenvolvimento de sistemas...</p>
+									<p>Desenvolver aplicações web utilizando a linguagem de programação JAVA
+										e banco de dados PostgreSQL, com o objetivo de suprir as necessidades do Estado
+										de Goiás e do Departamento de Planejamento eTecnologia da Informação,
+										baseando-se nos projetos desenvolvidos/especificados.</p>
 	        					</div>
 	        				</div>
 	        			</div>
@@ -366,7 +378,12 @@
 	        					<p>Março de 2012 - Setembro 2013</p>
 	        					<h4 class="title">Programador</h4>
 	        					<div class="description">
-	        						Apresentado o desenvolvimento de um Sistema de Automação Residencial utilizando Arduíno para controlar os componentes da residência através de uma interface Web disponível para computadores, celulares ou qualquer dispositivo com acesso à internet.</p>
+	        						<p>Principais atividades:
+										Desenvolver aplicações web utilizando a linguagem de programação ASP
+										e Banco de Dados MYSQL, com o objetivo de suprir as necessidades da Saúde do
+										município de Goiânia, baseando-se nos projetos desenvolvidos/especificados
+										pelos Analistas de Sistemas e/ou Gerente, visando racionalizar e/ou automatizar
+										processos e rotinas de trabalhos das diversas áreas funcionais da empresa.</p>
 	        					</div>
 	        				</div>
 	        			</div>
