--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 	        				<div class="col-sm-10">
 	        					<h3>PC Sistemas</h3>
 	        					<p>Março 2017 - atual</p>
-	        					<h4 class="title">Front-end Developer</h4>
+	        					<h4 class="title">Analista Desenvolvedor Sênior</h4>
 								<div class="description">
 	        						<p>Desenvolvimento de soluções para o mercado
 										atacadista distribuidor, com foco na usabilidade e portabilidade nas aplicações.
