Melhorias no portifolio

--- a/index.html
+++ b/index.html
@@ -153,8 +153,20 @@
 	                        </div>
 			                <div class="description text-center">
 			                    <p>Formado em Analise e Desenvolvimento de Sistemas e tenho conhecimentos em <b>HTML5, CSS3, Javascript, Java, MYSQL</b> entre outros.</p>
-								<p>Sempre gostei da área de TI e, desde que conheci a programação de computadores, descobri que tenho uma afinidade muito grande e uma vontade gigante de aprender. Foi então que decidi seguir na carreira de desenvolvimento, trabalhando e me divertindo.</p>
-								<p>Atualmente estou trabalhando na <a href="http://pcsist.com.br" target="_blank">Pc</a> com desenvolvimento frontend, mas não largo os estudos e minha curiosidade me levou a estudar, entre outras coisas, aplicativos mobile, backend com Java - com certificacao a caminho</p>
+								<p>
+									Sempre gostei da área de TI e, desde que conheci a programação de computadores, descobri
+									que tenho uma afinidade muito grande e uma vontade gigante de aprender.
+									Foi então que decidi seguir na carreira de desenvolvimento, trabalhando e me divertindo.
+								</p>
+								<p>
+									Atualmente estou trabalho na <a href="http://pcsist.com.br" target="_blank">Pc-Sistem</a>
+									com desenvolvimento, tanto Front-End quanto Back-End.
+									Fico orgulhoso de saber que entrei na empresa como referência
+									em ambos mundos do desenvolvimento de software,
+									e mais orgulhoso ainda de ter a por ministrar treinamentos até então,
+									não largo os estudos e minha curiosidade me levou a estudar, entre outras coisas,
+									aplicativos mobile e Java (com certificação a caminho, fique ligado!).
+								</p>
 								<div class="clear"></div>
 			                </div>
 	                    </div>
@@ -397,7 +409,7 @@
 	            <div class="row">
 	                <div class="col-md-8 col-md-offset-2">
 	                    <h2 class="text-center title">Entre em contato</h2>
-						<h4 class="text-center description">E ai, gostou do que viu e tem algum projeto legal?<br>Sinta-se a vontade para me enviar uma mensagem para o email <a href="mailto:mbomfim@live.com">mbomfim@live.com</a></h4>
+						<h4 class="text-center description">E ai, gostou do que viu e tem algum projeto legal onde minhas habilidades são úteis?<br>Sinta-se a vontade para me enviar uma mensagem para o email <a href="mailto:iagoquest@gmail.com">iagoquest@gmail.com</a></h4>
 						<br>
 						<p class="text-center title">OU</p>
 						<br>
