Melhorias no portifolio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<!-- OpenGraph & Twitter tags -->
 	<meta property="og:title" content="Iago Andrade de Almeida - Desenvolvedor Web - FullStack">
-	<meta property="og:description" content="Sou Desenvolvedora Frontend e Backend que quer seguir para o mundo de aplicativos. Aqui você pode ver um pouco sobre mim e alguns projetos que me envolvi." />
+	<meta property="og:description" content="Sou Desenvolvedor Frontend e Backend que quer seguir para o mundo de aplicativos. Aqui você pode ver um pouco sobre mim e alguns projetos que me envolvi." />
     <meta property="og:url" content="https://zuiago.github.io/">
     <meta property="og:image" content="https://s30.postimg.org/u1rklzg8h/opengraphimg.jpg">
     <meta name="twitter:title" content="Iago Andrade - Desenvolvedor Web - FullStack">
@@ -65,7 +65,7 @@
 	    	<a href="#">
 	        	<div class="logo-container">
 	                <div class="logo" rel="tooltip" title="O Capitão América entendeu a referência" data-placement="bottom" data-html="true">
-	                    <img src="assets/img/logo-iago-andrade.png" alt="Marcela Bomfim Logo">
+	                    <img src="assets/img/logo-iago-andrade.png" alt="Iago Andrade Logo">
 	                </div>
 	                <div class="brand">
 	                    Iago Andrade
